--- a/itStep/angular.json
+++ b/itStep/angular.json
@@ -28,6 +28,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               {
                 "input": "node_modules/@ionic/angular/css/core.css"
@@ -124,7 +125,10 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/styles.css"],
+            "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.css"
+            ],
             "scripts": []
           }
         },
