--- a/itStep/package.json
+++ b/itStep/package.json
@@ -23,6 +23,7 @@
     "@ionic/angular": "^7.4.3",
     "ionicons": "^7.1.2",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.32",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
